test/tasty/neg-isolated/src-2/TestAnnotated.check
TestAnnotated_fail.scala:5: error: can't find type required by a member of package tastytest: tastytest.annot; perhaps it is missing from the classpath.
  def test = new Annotated {}
                 ^
1 error
